src/objects/GLBL_Form_Template_Question__c.object
<CustomObject>
    <description>Stores questions related to each form</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Stores whether the question is applicable for a form or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Template__c</fullName>
        <description>Looks up to the associated form ; there exists one to one relation ship between Form and Question</description>
        <label>Form Template</label>
        <referenceTo>GLBL_Form_Template__c</referenceTo>
        <relationshipLabel>Form Template Questions</relationshipLabel>
        <relationshipName>Form_Template_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Helptext__c</fullName>
        <description>Stores more information to guide the front end user about the question</description>
        <label>Helptext</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <description>Stores the text related to each question that needs to appear on form</description>
        <label>Question Text</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Stores the sequence order in which each question should appear on form</description>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Form Template Question</label>
    <nameField>
        <displayFormat>FTQ-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Template Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>